--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <form id="form">
       <button id="closeForm">x</button>
       <label for="title">Title: </label>
-      <input id="title" type="text" /> <br />
+      <input id="title" type="text" required /> <br />
       <label for="author">Author: </label>
-      <input id="author" type="text" /><br />
+      <input id="author" type="text" required /><br />
       <label for="pages">Pages: </label>
-      <input id="pages" type="text" /><br />
+      <input id="pages" type="text" required /><br />
       <label for="read">Read: </label>
-      <input id="read" type="text" /><br />
+      <input id="read" type="text" required /><br />
       <input type="submit" id="submit" />
+      <p id="message"></p>
     </form>
 
     <div id="main"></div>
